--- a/src/home.html
+++ b/src/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucid Cuisine</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css">
 </head>
 <body>
     <!--Header container that contains the logo name and the navigation links-->
@@ -37,9 +38,15 @@
 
         <div class="footer-sec-socials">
             <h2>Follow Us</h2>
-            <a href="#"><img src="./assets/icons/alpha-x-circle.svg" alt="X-twitter"></a>
-            <a href="#"><img src="./assets/icons/facebook.svg" alt="Facebook"></a>
-            <a href="#"><img src="./assets/icons/instagram.svg" alt="Instagram"></a>
+            <a href="#" target="_blank">
+                <img src="./assets/icons/alpha-x-circle.svg" alt="X-twitter">
+            </a>
+            <a href="#" target="_blank">
+                <img src="./assets/icons/facebook.svg" alt="Facebook">
+            </a>
+            <a href="#" target="_blank">
+                <img src="./assets/icons/instagram.svg" alt="Instagram">
+            </a>
         </div>
         
         <div class="footer-sec-contact">
