--- a/src/home.html
+++ b/src/home.html
@@ -64,6 +64,6 @@
         <p>&copy; 2024 Lucid Cuisine | All rights reserved.</p>
        </div>
      </footer>
-    <script src="home.js" defer></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
