--- a/src/home.html
+++ b/src/home.html
@@ -29,7 +29,7 @@
    </main>
       
     <!-- Footer that contains the restaurant contact information-->
-     <footer class="footer">
+     <footer>
        <div class="footer-con">
         <div class="footer-sec-about">
             <h2>About Us</h2>
