Refactor: Changed class menu-list to id menuList

--- a/src/menu.html
+++ b/src/menu.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucid Cuisine</title>
+    <title>Lucid Cuisine-Menu</title>
     <link rel="stylesheet" href="menu.css">
 </head>
 <body>
     <!-- Welcoming statement-->
-    <header>
+    <header class="menu-header">
         <h1>Menu</h1>
         <p><strong>Embark on a culinary journey through the heart of Africa. Our menu is a masterpiece of flavors, crafted to awaken your senses and tell the story of a culture rich in tradition and passion. Each dish is an invitation to savor authenticity and create unforgettable memories.</strong></p>
     </header>
     <main>
         <!-- A class to implement the list of menu in the menu.js-->
-        <div class="menu-list"></div>
+        <section id="menuList"></section>
         <!-- Button to navigate back to the homepage-->
          <button onclick="navigateToHome()">Home</button>
     </main>
