feat: add a container to center button

--- a/src/menu.html
+++ b/src/menu.html
@@ -14,9 +14,11 @@
     </header>
     <main>
         <!-- A class to implement the list of menu in the menu.js-->
-        <section id="menuList"></section>
+        <section id="menuList" class="menu-list"></section>
         <!-- Button to navigate back to the homepage-->
-         <button onclick="navigateToHome()">Home</button>
+        <div class="btn-con">
+            <button onclick="navigateToHome()">Home</button>
+        </div>
     </main>
     <script type="module" src="index.js"></script>
 </body>
