--- a/src/menu.html
+++ b/src/menu.html
@@ -17,7 +17,9 @@
         <section id="menuList" class="menu-list"></section>
         <!-- Button to navigate back to the homepage-->
         <div class="btn-con">
-            <button onclick="navigateToHome()">Home</button>
+            <a href="index.html">
+                <button>Home</button>
+            </a>
         </div>
     </main>
     <script type="module" src="index.js"></script>
